--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -263,5 +263,5 @@
         prune = true
 
 [user]
-	name = Garðar Þorsteinsson
-	email = gardart@gmail.com
+	name = Samúel Jón Gunnarsson
+	email = samuel.jon.gunnarsson@gmail.com
