--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,4 +1,3 @@
-# This is an example Hyprland config file.
 # Refer to the wiki for more information.
 # https://wiki.hyprland.org/Configuring/Configuring-Hyprland/
 
@@ -15,7 +14,14 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+
+# This is the default to do every monitor automatically
+# Preferred is related to preferred size and refresh rate.
+#monitor=,preferred,auto,auto
+
+# 
+monitor = desc:LG Display 0x0553,preferred,auto,1
+monitor = desc:HP Inc. HP P34hc G4 CNC1020V2C,preferred,auto,1
 
 
 ###################
@@ -38,11 +44,8 @@ $menu = wofi --show drun
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-exec-once = nm-applet
-# exec-once = waybar & hyprpaper & firefox
-#exec-once = waybar
-exec-once = hyprpaper
-exec-once = blueman-applet
+exec-once = swaync & hypridle & hyprlock & hyprpaper
+exec-once = nm-applet & blueman-applet
 exec-once = waybar
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = 1password --silent
@@ -69,14 +72,14 @@ general {
     gaps_in = 5
     gaps_out = 10
 
-    border_size = 1
+    border_size = 4
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -191,6 +194,9 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+# Lock Screen when pressing mod+shift+l
+bind = $mainMod SHIFT, l, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
