--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -20,7 +20,7 @@ wheel_scroll_min_lines 1
 enable_audio_bell no
 window_padding_width 10
 hide_window_decorations yes
-background_opacity 0.7
+background_opacity 0.8
 dynamic_background_opacity yes
 confirm_os_window_close 0
 selection_foreground none
@@ -34,4 +34,4 @@ include "$HOME/.cache/wal/colors-kitty.conf"
 include ./custom.conf
 
 # Include te Nord theme
-include ./nord.conf
+include ./themes/nord.conf
