--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -48,7 +48,7 @@ disabled = false
 # represents the current operating system
 [os]
 style = "bg:#9A348E"
-disabled = true      # Disabled by default
+disabled = false     # Disabled by default
 
 [directory]
 style = "bg:#DA627D"
