--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -168,6 +168,7 @@ input {
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = true
+    workspace_swipe_forever = true
 }
 
 # Example per-device config
