added k8s to prompt

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -22,6 +22,7 @@ $rust\
 $scala\
 [](fg:#86BBD8 bg:#06969A)\
 $docker_context\
+$kubernetes\
 [](fg:#06969A bg:#33658A)\
 $time\
 [ ](fg:#33658A)\
@@ -78,6 +79,13 @@ format = '[ $symbol ($version) ]($style)'
 symbol = " "
 style = "bg:#06969A"
 format = '[ $symbol $context ]($style)'
+
+[kubernetes]
+format = '[ on ⛵ ($user on )($cluster in )$context \($namespace\)](fg:white bg:#06969A)'
+disabled = false
+contexts = [
+  { context_pattern = "dev.local.cluster.k8s", style = "green", symbol = "💔 " },
+]
 
 [elixir]
 symbol = " "
