Changed theme and added transparency

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,2 +1,4 @@
 font-family = "FiraCode Nerd Font Mono SemBd"
-theme = "synthwave-everything"
+#theme = "synthwave-everything"
+theme = catppuccin-frappe
+background-opacity = 0.8
