--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -81,7 +81,8 @@ style = "bg:#06969A"
 format = '[ $symbol $context ]($style)'
 
 [kubernetes]
-format = '[ on ⛵ ($user on )($cluster in )$context \($namespace\)](fg:white bg:#06969A)'
+#format = '[ on ⛵ ($user on )($cluster in )$context \($namespace\)](fg:white bg:#06969A)'
+format = '[ on ⛵($cluster in )$namespace](fg:white bg:#06969A)'
 disabled = false
 contexts = [
   { context_pattern = "dev.local.cluster.k8s", style = "green", symbol = "💔 " },
