--- a/superfile/.config/superfile/config.toml
+++ b/superfile/.config/superfile/config.toml
@@ -4,10 +4,10 @@
 theme = 'nord'
 # 
 # The editor files will be opened with. (Leave blank to use the EDITOR environment variable).
-editor = ""
+editor = "nvim"
 # 
 # The editor directories will be opened with. (Leave blank to use the default editors).
-dir_editor = ""
+dir_editor = "nvim"
 #
 # Auto check for update
 auto_check_update = true
@@ -58,7 +58,7 @@ code_previewer = ''
 nerdfont = true
 #
 # Set transparent background or not (this only work when your terminal background is transparent)
-transparent_background = false
+transparent_background = true
 # 
 # File preview width allow '0' (this mean same as file panel),'x' x must be from 2 to 10 (This means that the width of the file preview will be one xth of the total width.)
 file_preview_width = 0
@@ -83,10 +83,10 @@ border_middle_right = '┤'
 # Plugins means that you need to install some external dependencies to use them.
 # 
 # Show more detailed metadata, please install exiftool before enabling this plugin!
-metadata = false
+metadata = true
 #
 # Enable MD5 checksum generation for files
 enable_md5_checksum = false
 #
 # Zoxide support for the fast navigation
-zoxide_support = false
+zoxide_support = true
