Switch theme to Catppuccin Mocha and add NVM support
- Migrate from Nord to Catppuccin Mocha across all tools:
  - Ghostty: Enhanced config with documentation and mouse settings
  - K9s: Added Catppuccin Mocha skin
  - Kitty: Added Catppuccin Mocha theme
  - Neovim: Disabled Nord, using Catppuccin Mocha via colorscheme.lua
  - Superfile: Changed theme to Catppuccin
- Add Ghostty setup targets to Makefile (setup, prepare, backup)
- Add NVM (Node Version Manager) integration for Fish shell
  - Added nvm completions, configuration, and core functions
  - Enables version management for Node.js in Fish shell

--- a/k9s/.config/k9s/config.yaml
+++ b/k9s/.config/k9s/config.yaml
@@ -8,7 +8,7 @@ k9s:
   noExitOnCtrlC: false
   portForwardAddress: localhost
   ui:
-    skin: nord
+    skin: catppuccin-mocha
     enableMouse: false
     headless: false
     logoless: false
