--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -33,5 +33,5 @@ include "$HOME/.cache/wal/colors-kitty.conf"
 # Create the file custom.conf in ~/.config/kitty to overwrite the default configuration
 include ./custom.conf
 
-# Include te Nord theme
-include ./themes/nord.conf
+# Include Catppuccin Mocha theme
+include ./themes/catppuccin-mocha.conf
