--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,6 +1,121 @@
-#font-family = "FiraCode Nerd Font Mono SemBd"
-font-family = "0xProto Nerd Font Mono"
-#theme = "synthwave-everything"
-#theme = catppuccin-frappe
-theme = nord
+# Ghostty Configuration
+# ======================
+# This config is managed in the dotfiles repository.
+# Symlinked to: ~/.config/ghostty/config
+#
+# Keybindings:
+#   Cmd+,       - Open this config file
+#   Cmd+Shift+, - Reload config
+#
+# For all options: ghostty +show-config --default --docs
+# Documentation: https://ghostty.org/docs/config
+
+font-family = "FiraCode Nerd Font Mono SemBd"
+#font-family = "0xProto Nerd Font Mono"
+theme = Catppuccin Mocha
+
+# Background opacity (0.0 = transparent, 1.0 = opaque)
+# Note: On macOS, changing opacity requires restarting Ghostty
+# Quick presets: 0.7 (light), 0.85 (medium), 0.95 (subtle), 1.0 (opaque)
 background-opacity = 0.9
+
+# Mouse selection behavior
+# - Click and drag to select text
+# - Hold Option (Alt) to select text in programs that capture mouse (vim, tmux, etc.)
+# - Shift + click extends selection (never sent to running programs)
+copy-on-select = true
+mouse-shift-capture = never
+
+# ==============================================================================
+# Default Ghostty Keybindings Reference
+# ==============================================================================
+# Note: "super" = Cmd key on macOS
+# These are the built-in defaults. Uncomment and modify above to customize.
+
+# Font Size
+# ---------
+# super+equal / super++ = increase_font_size:1
+# super+- = decrease_font_size:1
+# super+0 = reset_font_size
+
+# Tabs
+# ----
+# super+t = new_tab
+# super+w = close_surface (close current tab/split)
+# super+alt+w = close_tab:this (close entire tab)
+# super+shift+w = close_window
+# super+alt+shift+w = close_all_windows
+# super+1-8 / super+digit_1-8 = goto_tab:1-8
+# super+9 = last_tab
+# super+shift+bracket_left = previous_tab
+# super+shift+bracket_right = next_tab
+# ctrl+tab = next_tab
+# ctrl+shift+tab = previous_tab
+
+# Splits
+# ------
+# super+d = new_split:right
+# super+shift+d = new_split:down
+# super+bracket_left = goto_split:previous
+# super+bracket_right = goto_split:next
+# super+alt+arrow_up = goto_split:up
+# super+alt+arrow_down = goto_split:down
+# super+alt+arrow_left = goto_split:left
+# super+alt+arrow_right = goto_split:right
+# super+ctrl+arrow_up = resize_split:up,10
+# super+ctrl+arrow_down = resize_split:down,10
+# super+ctrl+arrow_left = resize_split:left,10
+# super+ctrl+arrow_right = resize_split:right,10
+# super+ctrl+equal = equalize_splits
+# super+shift+enter = toggle_split_zoom
+
+# Copy/Paste/Selection
+# --------------------
+# super+c / copy = copy_to_clipboard
+# super+v / paste = paste_from_clipboard
+# super+shift+v = paste_from_selection
+# super+a = select_all
+# shift+arrow_up/down/left/right = adjust_selection
+# shift+home = adjust_selection:home
+# shift+end = adjust_selection:end
+# shift+page_up = adjust_selection:page_up
+# shift+page_down = adjust_selection:page_down
+
+# Scrolling
+# ---------
+# super+home = scroll_to_top
+# super+end = scroll_to_bottom
+# super+page_up = scroll_page_up
+# super+page_down = scroll_page_down
+
+# Navigation
+# ----------
+# super+arrow_up = jump_to_prompt:-1 (previous prompt)
+# super+arrow_down = jump_to_prompt:1 (next prompt)
+# super+shift+arrow_up = jump_to_prompt:-1
+# super+shift+arrow_down = jump_to_prompt:1
+# super+arrow_left = text:\x01 (beginning of line)
+# super+arrow_right = text:\x05 (end of line)
+# super+backspace = text:\x15 (delete line)
+# alt+arrow_left = esc:b (word left)
+# alt+arrow_right = esc:f (word right)
+
+# Window/Fullscreen
+# -----------------
+# super+n = new_window
+# super+enter / super+ctrl+f = toggle_fullscreen
+# super+q = quit
+
+# Other
+# -----
+# super+k = clear_screen
+# super+, = open_config
+# super+shift+, = reload_config
+# super+shift+p = toggle_command_palette
+# super+z = undo
+# super+shift+z = redo
+# super+shift+t = undo
+# super+alt+i = inspector:toggle
+# super+shift+j = write_screen_file:paste
+# super+alt+shift+j = write_screen_file:open
+# super+ctrl+shift+j = write_screen_file:copy
