--- a/superfile/.config/superfile/config.toml
+++ b/superfile/.config/superfile/config.toml
@@ -1,7 +1,8 @@
 # More details are at https://superfile.netlify.app/configure/superfile-config/
 #
 # change your theme
-theme = 'nord'
+# Options: catppuccin, catppuccin-frappe, catppuccin-latte, catppuccin-macchiato, nord
+theme = 'catppuccin'
 # 
 # The editor files will be opened with. (Leave blank to use the EDITOR environment variable).
 editor = "nvim"
